parslers-benchmark/src/tests/invalid/syntaxErr/basic/noBody.wacc
# program missing body

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin end
